--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 <body>
 
   <!-- Inline SVG logo -->
-  <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-leaf-icon lucide-leaf">
-    <rect width="24" height="24" style="fill: rgb(60, 221, 167); stroke: rgb(60, 221, 167); stroke-width: 0px;"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-leaf-icon lucide-leaf">
+    <rect width="24" height="24" rx="6" ry="6" style="fill: rgb(60, 221, 167); stroke: rgb(60, 221, 167); stroke-width: 0px;" />
     <g transform="matrix(0.763158, 0, 0, 0.763158, 3.223683, 3.223683)">
       <path d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;"/>
       <path d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;"/>
     </g>
   </svg>
 
-  <h1>Migreen is currently under construction</h1>
+  <h1>Migreen is currently under construction.</h1>
   <p>Sorry for the inconvenience.</p>
 
 </body>
