--- a/index.html
+++ b/index.html
@@ -1,74 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Migreen – Under Construction</title>
-  
-   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Migreen – Starting Up</title>
+
+  <!-- Roboto from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
+    :root {
+      --migreen-primary: #3cdda7;
+      --migreen-dark: #2a9d8f;
+      --migreen-bg: #f6f8fa;
+      --migreen-border: #d0d7de;
+      --migreen-text: #24292f;
+    }
+
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Sora', sans-serif;
-      background-color: #f7f9fa;
-      color: #333;
+      background-color: var(--migreen-bg);
+      font-family: 'Roboto', sans-serif;
+      color: var(--migreen-text);
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+    }
+
+    .container {
+      background: #fff;
+      border: 1px solid var(--migreen-border);
+      border-radius: 0.75rem;
+      padding: 2rem 2.5rem;
+      max-width: 480px;
       text-align: center;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
     }
 
     svg {
-      max-width: 200px;
-      margin-bottom: 2rem;
+      width: 48px;
+      height: 48px;
+      margin-bottom: 1.5rem;
     }
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 600;
-      color: #2a9d8f;
-      margin: 0;
+    h2 {
+      font-size: 1.5rem;
+      font-weight: 500;
+      margin: 0 0 0.5rem;
     }
 
     p {
-      font-size: 1rem;
-      color: #555;
-      margin-top: 0.75rem;
+      font-size: 0.95rem;
+      color: #57606a;
+      margin: 0;
     }
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #0f1117;
-        color: #eee;
+        background-color: #0d1117;
+        color: #c9d1d9;
       }
 
-      h1 {
-        color: #82dbc3;
+      .container {
+        background-color: #161b22;
+        border-color: #30363d;
       }
 
       p {
-        color: #aaa;
+        color: #8b949e;
       }
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <!-- Migreen Logo (SVG inline with rounded bg) -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+      <rect width="24" height="24" rx="6" ry="6" style="fill: rgb(60, 221, 167); stroke: rgb(60, 221, 167); stroke-width: 0px;" />
+      <g transform="matrix(0.763158, 0, 0, 0.763158, 3.223683, 3.223683)">
+        <path d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;" />
+        <path d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;" />
+      </g>
+    </svg>
 
-  <!-- Inline SVG logo -->
-  <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-leaf-icon lucide-leaf">
-    <rect width="24" height="24" rx="6" ry="6" style="fill: rgb(60, 221, 167); stroke: rgb(60, 221, 167); stroke-width: 0px;" />
-    <g transform="matrix(0.763158, 0, 0, 0.763158, 3.223683, 3.223683)">
-      <path d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;"/>
-      <path d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12" style="stroke: rgb(14, 17, 21); stroke-width: 1.8px;"/>
-    </g>
-  </svg>
-
-  <h2>Migreen is currently under construction.</h2>
-  <p>Sorry for the inconvenience.</p>
-
+    <h2>Migreen is starting up...</h2>
+    <p>Our servers are coming online right now.</p>
+  </div>
 </body>
 </html>
