--- a/under_construction.html
+++ b/under_construction.html
@@ -6,7 +6,7 @@
   <title>Migreen – Under Construction</title>
 
   <!-- Roboto from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -21,7 +21,7 @@
       margin: 0;
       padding: 0;
       background-color: var(--migreen-bg);
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Raleway', sans-serif;
       color: var(--migreen-text);
       display: flex;
       justify-content: center;
