--- a/under_construction.html
+++ b/under_construction.html
@@ -34,6 +34,7 @@
       border: 1px solid var(--migreen-border);
       border-radius: 0.75rem;
       padding: 2rem 2.5rem;
+      width: 480px;
       max-width: 480px;
       text-align: center;
       box-shadow: 0 1px 2px rgba(0,0,0,0.04);
