--- a/under_construction.html
+++ b/under_construction.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Migreen – Under Construction</title>
 
-  <!-- Roboto from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mozilla+Headline:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mozilla+Text:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -21,7 +21,6 @@
       margin: 0;
       padding: 0;
       background-color: var(--migreen-bg);
-      font-family: 'Raleway', sans-serif;
       color: var(--migreen-text);
       display: flex;
       justify-content: center;
@@ -47,12 +46,14 @@
     }
 
     h2 {
+      font-family: 'Mozilla Headline';
       font-size: 1.5rem;
       font-weight: 500;
       margin: 0 0 0.5rem;
     }
 
     p {
+      font-family: 'Mozilla Text';
       font-size: 0.95rem;
       color: #57606a;
       margin: 0;
