--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         if (status === '0') {
           window.location.href = 'https://migreen.app/';
         } else if (status === '1') {
-          window.location.href = 'under_contruction.html';
+          window.location.href = 'under_construction.html';
         } else {
           document.body.innerHTML = `<h1>STATUS: ${status}</h1>`;
         }
